--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Hello World</h1>  
+  
+    <header class="header">
+        <a href="#" class="logo">
+            <img id="lodo" src="#"> 
+        </a>
+
+        <nav id="navbar">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Projects</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
 </body>
 </html>
