--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
 
     <section id="welcome-section">
 <div class="home-content">
-    <h1>Hi, I'm Samkelisiwe (Angel) Mtimkulu</h1>
+    <h1>Hi, I'm Samkelisiwe </h1>
     <h3>Junior Frontend Developer</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, maxime omnis aperiam ullam, molestiae nostrum consequuntur velit, incidunt officiis rem culpa ipsum fugit esse soluta sunt consectetur molestias quasi error.</p>
-</div>
+
 <div class="btn-box">
     <a href="#">Hire Me</a>
     <a href="#">Let's Talk</a>
+</div>
 </div>
     </section>
 
