--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
   
@@ -40,13 +41,13 @@
 
 <div class="home-socials">
     <a href="#">
-        <box-icon type='logo' name='github'></box-icon>
+        <i class='bx bxl-github'></i>
     </a>
     <a href="#">
-        <box-icon type='logo' name='linkedin-square'></box-icon>
+        <i class='bx bxl-linkedin'></i>
     </a>
     <a href="#">
-        <box-icon name='instagram-alt' type='logo' ></box-icon>
+        <i class='bx bxl-instagram'></i>
     </a>
 </div>
     </section>
