--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="home-content">
     <h1>Hi, I'm Samkelisiwe </h1>
     <h3>Junior Frontend Developer</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, maxime omnis aperiam ullam, molestiae nostrum consequuntur velit, incidunt officiis rem culpa ipsum fugit esse soluta sunt consectetur molestias quasi error.</p>
+    <p>Welcome to my little corner of the web! 🌐 I swapped my criminology and psychology books for code and creativity, graduating with a BA General (Arts) in 2021. Now, I'm a front-end developer with dreams of becoming a full-stack wizard✨. Here, you'll find a blend of my passion projects, brainchildren, and the wild ride that's been my career so far. Dive in, explore, and if you want to chat or collaborate, hit me up! Thanks for stopping by, and enjoy the tour! 🚀</p>
 
 <div class="btn-box">
     <a href="#">Hire Me</a>
