--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 </div>
 
 <div class="home-socials">
-    <a href="#">
+    <a href="https://github.com/AngelSCodes" target="_blank">
         <i class='bx bxl-github'></i>
     </a>
-    <a href="#">
+    <a href="https://www.linkedin.com/in/samkelisiwe-mtimkulu-1a50822b8/ " target="_blank">
         <i class='bx bxl-linkedin'></i>
     </a>
     <a href="#">
