code for future use

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         <i class='bx bxl-instagram'></i>
     </a>
 </div>
+
+<!--content for welcom section image:
+<span class="home-imgHover"></span>
+-->
     </section>
 
 </body>
