about me section html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   
     <header class="header">
         <a href="#" class="logo">
-            <img id="lodo" src="#"> 
+            <!--<img id="lodo" src="#"> -->
+            AngelCodes.
         </a>
 
         <nav id="navbar">
@@ -54,6 +55,18 @@
 <!--content for welcom section image:
 <span class="home-imgHover"></span>
 -->
+    </section>
+
+    <section id="about">
+       <div class="placeholder"></div>
+       <div class="about-me-content">
+        <h3>About Me</h3>
+       <p>Hey there! 👋 I'm [Your Name], a front-end developer with a keen eye for design and a knack for creativity. My journey from criminology and psychology to web development is a testament to my passion for learning and innovation. Graduating with a BA General (Arts) in 2021, I now craft visually stunning and user-friendly websites using HTML, CSS, and JavaScript.
+
+        When I'm not coding, you'll find me immersed in a good book, dancing to my favorite tunes, or discovering new music. My three-year-old daughter brings endless joy and inspiration to my life, keeping things lively and exciting. As I continue to hone my front-end skills, I'm also gearing up for the next big leap: becoming a full-stack developer.
+        
+        Explore my projects, get to know my work, and feel free to reach out if you want to collaborate or just chat about tech and more. Thanks for stopping by!</p>
+    </div>
     </section>
 
 </body>
