--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </nav>
     </header>
 
+    <main>
     <section id="welcome-section">
 <div class="home-content">
     <h1>Hi, I'm Samkelisiwe </h1>
@@ -61,7 +62,7 @@
        <div class="placeholder"></div>
        <div class="about-me-content">
         <h3>About Me</h3>
-       <p>Hey there! 👋 I'm [Your Name], a front-end developer with a keen eye for design and a knack for creativity. My journey from criminology and psychology to web development is a testament to my passion for learning and innovation. Graduating with a BA General (Arts) in 2021, I now craft visually stunning and user-friendly websites using HTML, CSS, and JavaScript.
+       <p>Hey there! 👋 I'm Samkelisiwe [Angel] Mtimkulu, a front-end developer with a keen eye for design and a knack for creativity. My journey from criminology and psychology to web development is a testament to my passion for learning and innovation. Graduating with a BA General (Arts) in 2021, I now craft visually stunning and user-friendly websites using HTML, CSS, and JavaScript.
 
         When I'm not coding, you'll find me immersed in a good book, dancing to my favorite tunes, or discovering new music. My three-year-old daughter brings endless joy and inspiration to my life, keeping things lively and exciting. As I continue to hone my front-end skills, I'm also gearing up for the next big leap: becoming a full-stack developer.
         
@@ -69,5 +70,6 @@
     </div>
     </section>
 
+</main>
 </body>
 </html>
