Updated Nav Links

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </a>
 
         <nav id="navbar">
-            <a href="#" class="active" >Home</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
+            <a href="#welcome-section" class="active" >Home</a>
+            <a href="#about">About</a>
             <a href="#">Projects</a>
+            <a href="#">Services</a>
             <a href="#">Contact</a>
         </nav>
     </header>
