projects section html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="welcome-section">
 <div class="home-content">
     <h1>Hi, I'm Samkelisiwe </h1>
-    <h3>Junior Frontend Developer</h3>
+    <h2>Junior Frontend Developer</h2>
     <p>Welcome to my little corner of the web! 🌐 I swapped my criminology and psychology books for code and creativity, graduating with a BA General (Arts) in 2021. Now, I'm a front-end developer with dreams of becoming a full-stack wizard✨. Here, you'll find a blend of my passion projects, brainchildren, and the wild ride that's been my career so far. Dive in, explore, and if you want to chat or collaborate, hit me up! Thanks for stopping by, and enjoy the tour! 🚀</p>
 
 <div class="btn-box">
@@ -61,7 +61,7 @@
     <section id="about">
        <div class="placeholder"></div>
        <div class="about-me-content">
-        <h3>About Me</h3>
+        <h2>About Me</h2>
        <p>Hey there! 👋 I'm Samkelisiwe [Angel] Mtimkulu, a front-end developer with a keen eye for design and a knack for creativity. My journey from criminology and psychology to web development is a testament to my passion for learning and innovation. Graduating with a BA General (Arts) in 2021, I now craft visually stunning and user-friendly websites using HTML, CSS, and JavaScript.
 
         When I'm not coding, you'll find me immersed in a good book, dancing to my favorite tunes, or discovering new music. My three-year-old daughter brings endless joy and inspiration to my life, keeping things lively and exciting. As I continue to hone my front-end skills, I'm also gearing up for the next big leap: becoming a full-stack developer.
@@ -70,6 +70,61 @@
     </div>
     </section>
 
+    <section id="projects" class="projects-section">
+        <h2>My Projects</h2>
+        <div class="project">
+            <h3>Project Title 1</h3>
+            <p>A brief description of what this project does and what technologies were used to build it.</p>
+            <div class="project-links">
+                <a href="https://example.com/demo1" target="_blank">Live Demo</a>
+                <a href="https://github.com/yourusername/project1" target="_blank">Source Code</a>
+            </div>
+        </div>
+        <div class="project">
+            <h3>Project Title 2</h3>
+            <p>A brief description of what this project does and what technologies were used to build it.</p>
+            <div class="project-links">
+                <a href="https://example.com/demo2" target="_blank">Live Demo</a>
+                <a href="https://github.com/yourusername/project2" target="_blank">Source Code</a>
+            </div>
+        </div>
+        <div class="project">
+            <h3>Project Title 3</h3>
+            <p>A brief description of what this project does and what technologies were used to build it.</p>
+            <div class="project-links">
+                <a href="https://example.com/demo3" target="_blank">Live Demo</a>
+                <a href="https://github.com/yourusername/project3" target="_blank">Source Code</a>
+            </div>
+        </div>
+        <div class="project">
+            <h3>Project Title 4</h3>
+            <p>A brief description of what this project does and what technologies were used to build it.</p>
+            <div class="project-links">
+                <a href="https://example.com/demo4" target="_blank">Live Demo</a>
+                <a href="https://github.com/yourusername/project4" target="_blank">Source Code</a>
+            </div>
+        </div>
+        <div class="project">
+            <h3>Project Title 5</h3>
+            <p>A brief description of what this project does and what technologies were used to build it.</p>
+            <div class="project-links">
+                <a href="https://example.com/demo5" target="_blank">Live Demo</a>
+                <a href="https://github.com/yourusername/project5" target="_blank">Source Code</a>
+            </div>
+        </div>
+        <div class="project">
+            <h3>Project Title 6</h3>
+            <p>A brief description of what this project does and what technologies were used to build it.</p>
+            <div class="project-links">
+                <a href="https://example.com/demo6" target="_blank">Live Demo</a>
+                <a href="https://github.com/yourusername/project6" target="_blank">Source Code</a>
+            </div>
+        </div>
+    </section>
+    
+    
+
+</section>
 </main>
 </body>
 </html>
