updated project links

--- a/index.html
+++ b/index.html
@@ -74,27 +74,27 @@
         <h2>My Projects</h2>
         <div class="projects-grid">
             <div class="project">
-                <h3>Project Title 1</h3>
-                <p>A brief description of what this project does and what technologies were used to build it.</p>
+                <h3>SkySight</h3>
+                <p>SkySight is a weather site built using HTML, CSS and JavaScript. It also utilises the SheCodes weather api.</p>
                 <div class="project-links">
-                    <a href="https://example.com/demo1" target="_blank">Live Demo</a>
-                    <a href="https://github.com/yourusername/project1" target="_blank">Source Code</a>
+                    <a href="https://skysight-weather-app.netlify.app/" target="_blank">Live Demo</a>
+                    <a href="https://github.com/AngelSCodes/SkySight-weather-app" target="_blank">Source Code</a>
                 </div>
             </div>
             <div class="project">
-                <h3>Project Title 2</h3>
-                <p>A brief description of what this project does and what technologies were used to build it.</p>
+                <h3>TimeLabs</h3>
+                <p>A world clock with api technologies. Built using HTML, CSS, and JavaScript.</p>
                 <div class="project-links">
-                    <a href="https://example.com/demo2" target="_blank">Live Demo</a>
-                    <a href="https://github.com/yourusername/project2" target="_blank">Source Code</a>
+                    <a href="https://timelabs.netlify.app/" target="_blank">Live Demo</a>
+                    <a href="https://github.com/AngelSCodes/TimeLabs-Samkelisiwe-Mtimkulu" target="_blank">Source Code</a>
                 </div>
             </div>
             <div class="project">
-                <h3>Project Title 3</h3>
+                <h3>Mzansi Fact Finder</h3>
                 <p>A brief description of what this project does and what technologies were used to build it.</p>
                 <div class="project-links">
-                    <a href="https://example.com/demo3" target="_blank">Live Demo</a>
-                    <a href="https://github.com/yourusername/project3" target="_blank">Source Code</a>
+                    <a href="https://mzansi-fact-finder.netlify.app/" target="_blank">Live Demo</a>
+                    <a href="https://github.com/AngelSCodes/mzansi-fact-finder" target="_blank">Source Code</a>
                 </div>
             </div>
             <div class="project">
