toggle menu responsive

--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
 <body>
   
     <header class="header">
-        <a href="#" class="logo">
-            <!--<img id="lodo" src="#"> -->
-            AngelCodes.
-        </a>
-
+        <a href="#" class="logo">AngelCodes.</a>
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">
+            <i class='bx bx-menu'></i>
+        </label>
         <nav id="navbar">
-            <a href="#welcome-section" class="active" >Home</a>
+            <a href="#welcome-section" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
             <a href="#">Services</a>
             <a href="#">Contact</a>
         </nav>
     </header>
+    
 
     <main>
     <section id="welcome-section">
@@ -140,5 +141,10 @@
     </section>
 
 </main>
+
+<script src="index.js">
+ 
+    </script>
+    
 </body>
 </html>
